--- a/style.css
+++ b/style.css
@@ -6,9 +6,16 @@
 
 .container {
   height: 100vh;
+  width: 1080px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1.5fr 1.5fr 1fr;
   grid-template-rows: 0.5fr 0.75fr 2fr 2fr;
+}
+
+html {
+  font-family: "Inter", sans-serif;
+  color: #333;
 }
 
 /* HEADER */
@@ -22,6 +29,7 @@
 .header__upper {
   display: grid;
   grid-template-columns: 2fr 1fr;
+  gap: 60px;
 }
 
 .header__upper--search {
@@ -81,6 +89,8 @@
   border-radius: 15px;
   width: 120px;
   height: 45px;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 /* NAVIGATION */
@@ -88,4 +98,48 @@
 .nav {
   grid-row: 1 / -1;
   grid-column: 1 / 2;
+
+  padding: 30px;
+  display: grid;
+  grid-template-rows: repeat(3, min-content);
+  gap: 63px;
+
+  background-color: #2a8ac7;
+  color: #fff;
+  font-weight: 500;
+  font-size: 16px;
+}
+
+.nav__item,
+.nav__lower {
+  display: grid;
+  gap: 15px;
+}
+
+.nav__item--container {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  gap: 15px;
+  align-items: center;
+  cursor: pointer;
+}
+
+.nav__item--container:hover {
+  color: #eee;
+}
+
+.nav__item--container:active {
+  color: #ccc;
+}
+
+.nav__logo {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  gap: 10px;
+  align-items: center;
+  cursor: pointer;
+}
+
+.nav-text {
+  font-size: 26px;
 }
