--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 }
 
 .container {
-  height: 100vh;
   width: 100%;
   margin: 0 auto;
   display: grid;
   grid-template-columns: 1fr 1.5fr 1.5fr 1fr;
   grid-template-rows: 0.5fr 0.75fr 2fr 2fr;
+  min-height: 100vh; /* this removes the extra white space below footer*/
 }
 
 html {
@@ -191,13 +191,16 @@ html {
 
 .main__projects--item-icons {
   justify-self: end;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 15px;
 }
 
 /* MAIN - ANNOUNCEMENTS */
 
 .main__aside--container {
   display: grid;
-  grid-template-rows: min-content 1fr 1fr;
+  grid-template-rows: min-content 1fr min-content;
   gap: 16px;
 }
 
@@ -219,13 +222,9 @@ html {
   align-items: center;
 }
 
-/* 
-.main__announcements--container > div:not(:last-child) {
-  border-bottom: 1px solid #333;
-} */
-
 .main__announcements--item-heading {
   font-weight: 700;
+  font-size: 15px;
 }
 
 .main__announcements--container-item p {
@@ -237,4 +236,35 @@ html {
 .main__announcements--container-item:last-child > p {
   border-bottom: none;
   padding-bottom: 0;
+}
+
+/* MAIN - TRENDING */
+
+.main__trending {
+  align-self: end;
+}
+
+.main__trending--container {
+  display: grid;
+  background-color: #fff;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 15px;
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.main__trending--container img {
+  width: 60px;
+}
+
+.main__trending--user {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  align-items: center;
+  gap: 15px;
+}
+
+.main__trending--textbox p {
+  font-size: 13px;
+  color: #777;
 }
