--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+/* TODO: header styling */
+/* FIXME: between borders not aligning at the center */
+/* TODO: add content to the items, maybe link up my work? */
+
 .container {
   width: 100%;
   margin: 0 auto;
@@ -170,7 +174,7 @@ html {
 .main__projects--header {
   grid-column: 1 / -1;
   align-self: center;
-  margin-bottom: -5px;
+  margin-bottom: -10px;
 }
 
 .main__projects--item {
@@ -205,7 +209,7 @@ html {
 }
 
 .main__announcements--heading {
-  margin-bottom: -5px;
+  margin-bottom: -10px;
   align-self: center;
 }
 
@@ -220,6 +224,7 @@ html {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   align-items: center;
+  position: relative;
 }
 
 .main__announcements--item-heading {
@@ -227,15 +232,27 @@ html {
   font-size: 15px;
 }
 
-.main__announcements--container-item p {
-  font-size: 12px;
-  padding-bottom: 12.8px;
-  border-bottom: 1px solid #333;
+.main__announcements--container-item {
 }
 
-.main__announcements--container-item:last-child > p {
-  border-bottom: none;
-  padding-bottom: 0;
+.main__announcements--container-item:first-child::after,
+.main__announcements--container-item:nth-child(2)::after {
+  content: "";
+  position: absolute;
+  background: #777;
+  width: 100%;
+  height: 1px;
+}
+
+.main__announcements--container-item:nth-child(2)::after {
+  bottom: 33.3333333%;
+}
+.main__announcements--container-item:first-child::after {
+  bottom: 66.6666666%;
+}
+
+.main__announcements--container-item p {
+  font-size: 12px;
 }
 
 /* MAIN - TRENDING */
@@ -255,6 +272,10 @@ html {
 
 .main__trending--container img {
   width: 60px;
+}
+
+.main__trending--heading {
+  margin-bottom: -10px;
 }
 
 .main__trending--user {
